--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     font-size: 18px;
 }
 .donate-button:hover {
-    background: linear-gradient(90deg, rgb(0 139 11) 0%, rgb(0 0 0) 100%);
+    background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
 }
 
 /* top banner ends here  */
@@ -120,7 +120,7 @@ body {
     transition: 0.3s;
 }
 .donate-field a:hover {
-    background: linear-gradient(90deg, rgb(0 139 11) 0%, rgb(0 0 0) 100%);
+    background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
 }
 /* donate plan start here  */
 .section-title {
@@ -147,9 +147,14 @@ body {
 .plan-details {
     width: 30%;
     display: inline-block;
-    background: #f9e5e5;
+    background: #f1d9d9;
     padding: 50px 20px;
     margin: 0 10px;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+.plan-details:hover{
+    background: #ece9e9;
 }
 .plan-details h3 {
     font-size: 25px;
@@ -160,4 +165,84 @@ body {
     font-size: 18px;
     line-height: 1.3;
     color: #8f8a8a;
+}
+.bg2{
+    background-color:rgb(182, 231, 231) ;
+    transition: 0.3s;
+}
+.bg2:hover{
+    background-color:rgb(203, 240, 240) ;
+}
+.bg3{
+    background-color:rgb(234, 245, 189) ;
+    transition: 0.3s;
+}
+.bg3:hover{
+    background-color:rgb(243, 247, 223) ;
+}
+/* blog section start here  */
+.blog-section {
+    padding: 0 200px;
+}
+.blog-details {
+    display: flex;
+    margin-bottom: 100px;
+}
+.blog-image img {
+    width: 500px;
+}
+.blog-content {
+    text-align: left;
+    padding: 50px 70px 0 0;
+}
+.blog-content h2 {
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.blog-content p {
+    font-size: 18px;
+    color: #959393;
+    margin-bottom: 50px;
+}
+.blog-content a {
+    background: linear-gradient(90deg, rgba(7, 129, 56, 1) 0%, rgba(30, 217, 9, 1) 100%);
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    font-size: 20px;
+    transition: 0.3s;
+}
+.blog-content a:hover {
+    background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
+}
+.blog-image-2 img {
+    width: 500px;
+}
+.blog-content-2 {
+    text-align: left;
+    padding: 50px 0 0 70px;
+}
+.blog-content-2 h2 {
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.blog-content-2 p {
+    font-size: 18px;
+    color: #959393;
+    margin-bottom: 50px;
+}
+.blog-content-2 a {
+    background: linear-gradient(90deg, rgba(7, 129, 56, 1) 0%, rgba(30, 217, 9, 1) 100%);
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    font-size: 20px;
+    transition: 0.3s;
+}
+.blog-content-2 a:hover {
+    background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
 }
