--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .top-inner {
     background: rgb(0 0 0 / 52%);
-    padding: 100px 300px;
+    padding: 200px 300px;
 }
 
 .top-inner h1 {
@@ -184,12 +184,15 @@ body {
 .blog-section {
     padding: 0 200px;
 }
+.blog-section .section-title {
+    padding: 15px 150px 50px 150px;
+}
 .blog-details {
     display: flex;
     margin-bottom: 100px;
 }
 .blog-image img {
-    width: 500px;
+    width: 400px;
 }
 .blog-content {
     text-align: left;
@@ -218,7 +221,7 @@ body {
     background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
 }
 .blog-image-2 img {
-    width: 500px;
+    width: 400px;
 }
 .blog-content-2 {
     text-align: left;
@@ -245,4 +248,100 @@ body {
 }
 .blog-content-2 a:hover {
     background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
+}
+/* volunteer section  */
+section.team-area {
+    padding: 70px 0;
+    background: #d6ffd8;
+}
+.our-team {
+    padding: 0 200px;
+    display: flex;
+}
+.team-member {
+    margin: 0 10px;
+    border: 1px solid #ddd;
+    padding: 10px 10px 40px 10px;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+}
+.team-member:hover {
+    box-shadow: 10px 10px 20px #c3b8b8;
+}
+.team-member img {
+    border: 4px solid #000;
+}
+.team-member h4 {
+    font-size: 25px;
+    padding: 20px 0 10px 0;
+}
+.team-member span {
+    display: block;
+    color: #027616;
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+.team-member a {
+    padding: 10px 20px;
+    margin: 10px 0;
+    text-decoration: none;
+    color: #000;
+    border-radius: 10px;
+    display: inline-block;
+    border: 1px solid #95d394;
+    transition: 0.3s;
+}
+.team-member a:hover {
+    box-shadow: 10px 10px 20px #c3b8b8;
+}
+/* newsletter section  */
+.newsletter {
+    padding: 100px 0;
+}
+.newsletter .section-title {
+    text-align: center;
+    padding: 15px 300px 20px 300px;
+}
+.newsletter-form {
+    text-align: center;
+}
+.newsletter-form input[type="email"] {
+    padding: 10px 20px 10px 20px;
+    font-size: 18px;
+    width: 400px;
+    border: 1px solid #24a70c;
+    border-radius: 10px;
+}
+.newsletter-form input[type="submit"] {
+    background: linear-gradient(90deg, rgba(7, 129, 56, 1) 0%, rgba(30, 217, 9, 1) 100%);
+    padding: 15px 30px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 0 5px 5px 0;
+    border: 0;
+    font-size: 20px;
+    transition: 0.3s;
+    margin-left: -30px;
+}
+.newsletter-form input[type="submit"]:hover {
+    background: linear-gradient(90deg, rgba(30, 217, 9, 1), rgba(7, 129, 56, 1) 100%);
+}
+/* footer area  */
+footer {
+    text-align: center;
+    padding: 70px 0px;
+    background: rgb(0, 96, 16);
+    border-top: 5px solid #25f70c;
+}
+footer h2 {
+    font-style: italic;
+    font-weight: 900;
+    font-size: 30px;
+    color: #fff;
+    padding-bottom: 20px;
+}
+footer p {
+    color: #fff;
 }
